[package]
name = "tinode-helper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "notification-all", "path-all", "shell-open", "system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.26.0", features = ["macros"] }
tokio-cron-scheduler = "0.9.4"
chrono = "0.4.24"
reqwest = { version = "0.11.14", features = ["json"] }
log = "0.4.17"
env_logger = { version = "0.10.0", features = ["color", "humantime"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
